tests/snapshots/help__help-2.snap
---
source: tests/help.rs
expression: stdout
---
Find secrets and sensitive information in textual data

Usage: noseyparker [OPTIONS] <COMMAND>

Commands:
  scan
          Scan content for secrets
  summarize
          Summarize scan findings
  report
          Report detailed scan findings
  github
          Interact with GitHub
  datastore
          Manage datastores
  rules
          Manage rules
  help
          Print this message or the help of the given subcommand(s)

Options:
  -h, --help
          Print help (see a summary with '-h')

  -V, --version
          Print version

Global Options:
  -v, --verbose...
          Enable verbose output
          
          This can be repeated up to 3 times to enable successively more output.

      --color <MODE>
          Enable or disable colored output
          
          When this is "auto", colors are enabled when stdout is a tty.
          
          If the `NO_COLOR` environment variable is set, it takes precedence and is equivalent to
          `--color=never`.
          
          [default: auto]
          [possible values: auto, never, always]

      --progress <MODE>
          Enable or disable progress bars
          
          When this is "auto", progress bars are enabled when stderr is a tty.
          
          [default: auto]
          [possible values: auto, never, always]

