tests/snapshots/help__help_github_repos_short-2.snap
---
source: tests/help.rs
expression: stdout
---
Interact with GitHub repositories

Usage: noseyparker github repos [OPTIONS] <COMMAND>

Commands:
  list  List repositories belonging to a specific user or organization
  help  Print this message or the help of the given subcommand(s)

Options:
  -h, --help  Print help (see more with '--help')

Global Options:
  -v, --verbose...       Enable verbose output
      --color <MODE>     Enable or disable colored output [default: auto] [possible values: auto,
                         never, always]
      --progress <MODE>  Enable or disable progress bars [default: auto] [possible values: auto,
                         never, always]

